# HexeTerminal

./: CMakeLists.txt  cleanup_containers.sh
examples/: CMakeLists.txt
examples/snapshotdemo/: CMakeLists.txt  folderwatch.cpp  main.cpp  monit.h  networkwidget.cpp  sn_font.h  snapshotdemo.cpp
src/: TerminalEmulator.cpp
